buttons/WordArt/style.module.scss
@import "@/styles/_variables";

.main {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;

  display: flex;
  align-items: center;
  justify-content: center;

  background-color: #eceff2;

  div,
  img {
    position: absolute;
    zoom: 0.9;
  }

  .blueWave {
    top: 1rem;
    left: 2rem;

    font-family: Impact, sans-serif;
    font-size: 4rem;
    color: #24c0fd;
    -webkit-text-stroke: 0.01em #0000aa;
    filter: progid:DXImageTransform.Microsoft.Glow(Color=#0000aa,Strength=1);
    text-shadow: 0.1em -0.1em 0px #0000aa;
    letter-spacing: -0.05em;
    z-index: 3;
  }

  .rainbow {
    top: 1rem;
    right: 2rem;
    display: inline-block;

    font-family: arial;
    font-size: 4rem;
    background: linear-gradient(
      to right,
      red,
      orange,
      gold,
      lime,
      dodgerblue,
      purple
    );
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    z-index: 2;

    &:after {
      content: "quick";
      position: absolute;
      left: 0;
      bottom: 0;

      background: linear-gradient(
        to right,
        red,
        orange,
        gold,
        lime,
        dodgerblue,
        purple
      );

      background-clip: text;
      -webkit-background-clip: text;
      -webkit-text-fill-color: transparent;
      z-index: -1;
    }

    &:before {
      content: "quick";
      position: absolute;
      left: -1.4ch;
      bottom: 0;

      color: black;
      transform: skew(55deg);
      background: linear-gradient(#eee, #c0c0c0);

      background-clip: text;
      -webkit-background-clip: text;
      -webkit-text-fill-color: transparent;
      z-index: -1;
    }
  }

  /* SUPERHERO */
  .superheroWrap {
    top: 5.5rem;
    left: 1rem;
    transform: rotate(-10deg) skew(-15deg);
  }

  .superhero {
    font-size: 3.5rem;
    background: linear-gradient(yellow, gold, orange, orange);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-family: impact;

    &:before {
      content: "brown";
      position: absolute;
      left: 0.2ch;
      bottom: -0.2ch;
      color: gray;
      background: linear-gradient(brown, brown);
      background-clip: text;
      -webkit-background-clip: text;
      -webkit-text-fill-color: transparent;
      z-index: -1;
    }
  }

  .outline {
    top: 5rem;
    right: 3rem;

    font-family: helvetica;
    font-size: 4rem;
    font-weight: 500 !important;
    color: white;
    font-weight: 100;
    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
      1px 1px 0 #000;
    transform: rotate(10deg);
  }

  .radial {
    top: 8rem;
    left: 50%;
    transform: translateX(-50%);

    font-family: Impact, sans-serif;
    font-weight: bold;
    font-size: 3rem;

    background: -webkit-linear-gradient(#4666a2, #81a8eb);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    /*  reflection  */
    -webkit-box-reflect: below -20% -webkit-gradient(
        linear,
        left top,
        left bottom,
        from(transparent),
        color-stop(50%, transparent),
        to(rgba(255, 255, 255, 0.5))
      );

      @media only screen and (max-width: 768px) {
        & {
          top: 7.5rem;
        }
      }
  }

  .over {
    position: absolute;
    top: 11rem;
    left: 1rem;

    height: auto;
    transform: rotate(10deg) skew(-15deg);

    @media only screen and (max-width: 768px) {
      & {
        top: 9.5rem;
      }
    }
  }

  .tiltWrapper {
    font-size: 3rem;
    top: 9rem;
    right: 6rem;

    display: inline-block;
    transform: scaleY(2) perspective(1em) rotateX(15deg)
      translate3d(-19%, -14%, -0.4em);
    -webkit-transform: scaleY(2) perspective(1em) rotateX(15deg)
      translate3d(-19%, -14%, -0.4em);
    -moz-transform: scaleY(2) perspective(1em) rotateX(15deg)
      translate3d(-19%, -14%, -0.4em);
    -o-transform: scaleY(2) perspective(1em) rotateX(15deg)
      translate3d(-19%, -14%, -0.4em);
    -ms-transform: scaleY(2) perspective(1em) rotateX(15deg)
      translate3d(-19%, -14%, -0.4em);

      @media only screen and (max-width: 768px) {
        & {
          top: 8rem;
        }
      }

    .tilt {
      font-family: Arial, sans-serif;
      font-weight: bold;
      background: #390c0b;
      background: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiA/Pgo8c3ZnIHhtbG5zPSJodâ€¦IgaGVpZ2h0PSIxIiBmaWxsPSJ1cmwoI2dyYWQtdWNnZy1nZW5lcmF0ZWQpIiAvPgo8L3N2Zz4=);
      background: -moz-linear-gradient(top, #390c0b 0%, #f6bf28 73%);
      background: -webkit-gradient(
        linear,
        left top,
        left bottom,
        color-stop(0%, #390c0b),
        color-stop(73%, #f6bf28)
      );
      background: -webkit-linear-gradient(top, #390c0b 0%, #f6bf28 73%);
      background: -o-linear-gradient(top, #390c0b 0%, #f6bf28 73%);
      background: -ms-linear-gradient(top, #390c0b 0%, #f6bf28 73%);
      background: linear-gradient(to bottom, #390c0b 0%, #f6bf28 73%);
      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#390c0b', endColorstr='#f6bf28', GradientType=0);
      background-clip: text;
      -webkit-background-clip: text;
      -webkit-text-fill-color: transparent;
      letter-spacing: -0.01em;
      -webkit-text-stroke: 0.01em #a3a3a3;

      &:before {
        content: "the";
        position: absolute;
        z-index: -1;
        top: 0.17em;
        opacity: 0.6;
        -webkit-text-fill-color: #6d4916;
        background-clip: border-box;
        -webkit-background-clip: border-box;
        transform: perspective(1em) rotateX(65deg) scale(0.77);
      }
    }
  }

  .horizon {
    top: 18rem;

    font-family: Arial, sans-serif;
    font-weight: bold;
    font-size: 3rem;

    background: #2f3238;
    background: linear-gradient(
      to bottom,
      #2f3238 0%,
      #2f3238 13%,
      rgb(225, 221, 221) 50%,
      #812f30 56%,
      #ffffff 100%
    );
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7286a7', endColorstr='#ffffff', GradientType=0);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;

    @media only screen and (max-width: 768px) {
      & {
        top: 16rem;
      }
    }
  }
}

.button {
  border-radius: 0.5rem;
  overflow: hidden;
}

